# p23-euler

./: .gitignore  AbundantNumbers.hpp  CMakeLists.txt  Divisors.hpp  NonTwoAbundantSumNumber.hpp  README.md  p23-euler-test.cpp  p23-euler-test2.cpp  p23-euler.cpp
test/: AbundantNumbers-test.cpp  CMakeLists.txt  Divisors-test.cpp  NonTwoAbundantSumNumber-test.cpp
